--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.6
+  image_picker: ^0.8.4+4
   shared_preferences: ^2.2.2
   cupertino_icons: ^1.0.8
 
